test/corpus/comments.txt
============================================
Comments
============================================

--
-- single-line comment, below an empty single-line comment

--[[
"block comment"
--]]

--[[
"block comment"
]]

-- [[
"not block comment"
--]]

--[==[
"level 2 block comment"
-- ]==]

--[==[
"level 2 block comment"
]==]

-- [==[
"not level 2 block comment"
--]==]

---

(program
  (comment)
  (comment)

  (comment)

  (comment)

  (comment)
  (expression (string (string_content)))
  (comment)

  (comment)

  (comment)

  (comment)
  (expression (string (string_content)))
  (comment))
